Fix: remove border-radius on iOS

--- a/packages/scrabble-solver/src/components/Board/components/InputPrompt/InputPrompt.module.scss
+++ b/packages/scrabble-solver/src/components/Board/components/InputPrompt/InputPrompt.module.scss
@@ -28,6 +28,7 @@
   border: none;
   border-top: var(--border);
   border-bottom: var(--border);
+  border-radius: 0;
 }
 
 .insert {
